<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="7dp"
    android:layout_marginBottom="3dp"
    android:layout_marginHorizontal="10dp"
    android:paddingHorizontal="5dp"
    android:elevation="2dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ly_item_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="10dp">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_item_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="?android:attr/selectableItemBackground"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:id="@+id/ly_item_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/et_content_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:textSize="16sp"
                android:hint="@string/result_list_left"
                android:fontFamily="serif"
                android:textColor="?attr/colorTextDefault"
                android:inputType="text"
                android:nextFocusDown="@+id/et_content_upper"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:textAlignment="center"
                />
            <EditText
                android:id="@+id/et_content_upper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:textSize="16sp"
                android:textColor="?attr/colorTextDefault"
                android:hint="@string/result_list_upper"
                android:inputType="text"
                android:nextFocusDown="@+id/et_content_bottom"
                />
        </LinearLayout>

        <EditText
            android:id="@+id/et_content_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:ellipsize="none"
            android:hint="@string/result_list_bottom"
            android:inputType="textMultiLine"
            android:singleLine="false"
            />
        <!--            android:textIsSelectable="true"-->
        <!--            android:descendantFocusability="afterDescendants"-->
        <Button
            android:id="@+id/btn_preview"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/button_preview"
            android:layout_gravity="start"
            android:layout_marginVertical="5dp"
            android:paddingVertical="0dp"
            android:textSize="14sp"
            android:foreground="?selectableItemBackground"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/button_add"
                android:layout_gravity="end"
                android:textSize="14sp"
                android:padding="0dp"
                android:foreground="?selectableItemBackground"
                android:layout_marginEnd="15dp"
                />
            <Button
                android:id="@+id/btn_confirm_and_next"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/button_add_and_next"
                android:layout_gravity="end"
                android:textSize="14sp"
                android:paddingHorizontal="0dp"
                android:foreground="?selectableItemBackground"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>