<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/whole_main_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/query_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:paddingVertical="15dp"
        android:paddingHorizontal="10dp"
        android:elevation="3dp">
        <LinearLayout
            android:id="@+id/input_line"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingHorizontal="5dp"
            >
            <Spinner
                android:id="@+id/spinner_select"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:foreground="?selectableItemBackground"
                android:padding="0dp"
                android:spinnerMode="dropdown"
                android:dropDownVerticalOffset="45dp"
                android:background="@null"
                android:textAlignment="center"
                android:textColor="@color/blue_700"
                android:textSize="24sp"/>
            <EditText
                android:id="@+id/edit_text_input"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/search_tips"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="15dp"
                android:paddingVertical="0dp"
                android:textSize="18sp"
                android:focusable="true"
                android:focusableInTouchMode="true"/>
            <Button
                android:id="@+id/btn_clear"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:foreground="?selectableItemBackground"
                android:padding="0dp"
                android:textAlignment="center"
                android:text="@string/search_clear"
                android:textColor="@color/blue_700"
                android:textSize="24sp"/>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/result_fragment"
        android:name="shuidict.ResultFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/query_layout"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        app:fabSize="auto"
        app:srcCompat="@android:drawable/ic_input_add"
        android:contentDescription="@string/entry_manager_add_dict"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/view_placeholder"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>